<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context=".presentation.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/welcome_to_dailyvita"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorNavyBlueDark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorNavyBlueDark"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <ImageView
        android:id="@+id/ivWelcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/img_welcome"
        app:layout_constraintDimensionRatio="H, 5:4"
        app:layout_constraintTop_toBottomOf="@id/tvContent" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorNavyBlueDark"
        app:layout_constraintTop_toBottomOf="@id/ivWelcome" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="Get Started"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>